--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ highlighter: pygments
 url: http://playbook.cio.gov
 
 collections:
-  - plays
+  - guidanceSections
 
 sass:
     sass_dir: assets/_sass
