--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 #document settings
 title: FITARA
-desc: "DESCRIPTION"
+desc: "Management and Oversight of Federal Information Technology"
 url: http://gsa.github.io/fitara/
 
 #global settings, no need to change these
