--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 #document settings
 title: FITARA
-desc: "Management and Oversight of Federal Information Technology"
+desc: "Management and Oversight of Information Technology Resources - Proposed Guidance"
 url: http://whitehouse.github.io/fitara/
 
 #global settings, no need to change these
