--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # settings from whitehouse.github.io/fitara
 
 #document settings
-title: FITARA
-desc: "Management and Oversight of Information Technology Resources - Proposed Guidance"
+title: Management and Oversight of Information Technology Resources
+desc: Proposed Guidance From the Office of Management and Budget
 url: http://whitehouse.github.io/fitara/
 
 #global settings, no need to change these
