--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 #document settings
 title: Management and Oversight of Information Technology Resources
-desc: Proposed Guidance From the Office of Management and Budget
+desc: Proposed Guidance From the Office of Management and Budget (OMB)
 url: http://whitehouse.github.io/fitara/
 
 #global settings, no need to change these
